First complete version

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,4 @@
-ABLY_API_KEY=your-api-key
+ABLY_API_KEY=<REPLACE WITH YOUR API KEY SECRET>
+CLIENT_ID=ably-auth-demo
+TOKEN_EXPIRY_MSEC=30000
 PORT=8080
