--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ably": "^1.2.6",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.7",
+    "pretty-print-json": "^1.0.0"
   }
 }
